# felisha

./: .gitignore  CHANGELOG.md  causal_pdd.txt
causalrag/: .gitignore  README.md  pyproject.toml
causalrag/.github/workflows/: ci.yml
causalrag/docs/: PARROT_TEST.md  PIPELINE.md  SPRINT_PLAN_V1.md  TUTORIAL.md
causalrag/scripts/: generate_synthetic_health.py  parrot_signflip_lalonde.py  run_parrot_test.py
causalrag/src/causalrag/: __init__.py  auto.py  master_loop.py
causalrag/src/causalrag/audits/: __init__.py  end_to_end_flow.py  island_detector.py  method_coverage.py
causalrag/src/causalrag/cli/: doctor.py  main.py  studies.py
causalrag/src/causalrag/core/: __init__.py  dag_constructors.py  effect_modifier_topology.py  estimand.py  flag_descriptions.py  flag_registry.py  flag_registry.yaml  flags.py  graph.py  interference.py  ledger.py  protocol.py  registry.py  result.py  roles.py  temporal_graph.py
causalrag/src/causalrag/data/: ab_platforms.py  checks.py  features.py  flags.py  missingness.py  profiler.py  selection.py
causalrag/src/causalrag/discovery/: __init__.py  ci_backend.py  dag_conflicts.py  expert.py  investigator.py  markov_boundary.py  timeseries_cd.py
causalrag/src/causalrag/estimators/: __init__.py  base.py  catalog.py  causaltune_select.py  learned_router.py  success_classifier.py
causalrag/src/causalrag/feasibility/: __init__.py  power.py  report.py  thresholds.py
causalrag/src/causalrag/hypothesize/: __init__.py  automated.py  dedupe.py  manual.py  master.py  queue.py
causalrag/src/causalrag/identify/: __init__.py  ananke_bridge.py  autobounds_bridge.py  decomposition.py  transportability.py
causalrag/src/causalrag/llm/: cache.py  cassette.py  dspy_modules.py  guards.py  hardware.py  hardware_tiers.py  honesty.py  multi_agent.py  ollama_client.py  rag_history.py  selector.py  self_refine.py  spec_decoding.py
causalrag/src/causalrag/loop_scoring/: eig.py  (+3 more)
causalrag/tests/integration/: test_discovery_e2e.py  test_identify.py  test_linear_dml_smoke.py  test_master_loop_fake_client.py  test_parrot_analyzer.py  test_parrot_harness.py
causalrag/tests/synthetic_datasets/: conftest.py  test_acic.py  test_high_dim.py  test_ihdp_cate.py  test_lalonde.py  test_m_bias.py  test_mixed_types.py  test_survival_routing.py
causalrag/tests/unit/: test_cassette.py  test_catalog_filter.py  test_cli.py  test_cli_discover.py  test_connectors.py  test_connectors_extended.py  test_features.py  test_flags.py  test_graph.py  test_guards.py  test_hardware.py  test_master_loop_helpers.py  test_master_loop_wiring.py  test_nuisance.py  test_ollama_client.py  test_profiler.py  test_protocol_roundtrip.py  test_registry.py  test_select.py  test_selection.py  test_sensitivity.py  test_tui.py
(+205 files in other folders)
