[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causalrag"
version = "0.1.0a0"
description = "LLM-assisted causal inference exploratory & estimation pipeline built on the Petersen–van der Laan Causal Roadmap"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brennan Kelley" }]
keywords = ["causal-inference", "llm", "causal-roadmap", "dowhy", "econml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.79",
    "pyyaml>=6.0",
    "networkx>=3.2",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "psutil>=5.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
estimators = [
    "econml>=0.15",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "dowhy>=0.11",
    "statsmodels>=0.14",
]
sensitivity = [
    "sensemakr>=0.1.5",
]
real-data = [
    "causaldata>=0.1.4",
]
bart = [
    "pymc>=5.10",
    "pymc-bart>=0.5",
]
gpu = [
    "pynvml>=11.5",
]
duckdb = [
    "duckdb>=0.10",
]
rbridge = [
    "rpy2>=3.5",
]
sql = [
    "sqlalchemy>=2.0",
    "connectorx>=0.3",
]
excel = [
    "openpyxl>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-psutil",
]

[project.scripts]
causalrag = "causalrag.cli.main:app"

[project.urls]
Homepage = "https://github.com/brennanskelley/causalrag"
Issues = "https://github.com/brennanskelley/causalrag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/causalrag"]

[tool.hatch.build.targets.sdist]
include = ["src/causalrag", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # ruff format handles line length

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/causalrag"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["econml.*", "networkx.*", "pynvml.*", "psutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end smoke tests",
    "live_llm: requires a running Ollama server (opt-in)",
]
asyncio_mode = "auto"
